# whisper_transcriber

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: audio_agent.py  config.py  hotkey_daemon.py  llm_agent.py  transcriber_popup.py  transcription_agent.py
src/ui/: components.py  popup_window.py  tray.py
src/utils/: clipboard.py  lockfile.py
